# hufr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
hufr/: constants.py  convert.py  onnx.py  redact.py  utils.py
hufr/models/: __init__.py  ner.py  onnx.py  utils.py
hufr/tests/: test_convert.py  test_utils.py
tests/: test_utils.py
tests/integration/: test_redact.py
tests/unit/: test_argmax_with_threshold.py  test_convert.py  test_model2onnx.py  test_softmax.py  test_utils.py
