[tool.poetry]
name = "hufr"
version = "1.0.0"
description = "Redact Text with HuggingFace Models"
authors = ["Robertson Wang <robertsonwang@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.36.2"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
