[tool.poetry]
name = "hufr"
version = "1.0.1"
description = "Redact Text with HuggingFace Models"
authors = ["Robertson Wang <robertsonwang@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "~4.36.2"
torch = "^2.1.2"
# If both ONNX versions are installed, things will not work.
onnxruntime = { version = "^1.13.1", optional = true, markers="extra!='gpu'"}
onnxruntime-gpu = { version = "^1.13.1", optional = true }

[tool.poetry.extras]
gpu = ["onnxruntime-gpu"]
cpu = ["onnxruntime"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

